feat: thread routine draft buffs under one Jeff post; 1st/2nd/last stay in channel
